trunk/yanl/examples/t1/fail/atribuire_1.yanl
# Atribuirea trebuie sa aiba RHS compatibil cu tipul de baza al array-ului daca LHS = element al unui array

program dude;
var a:array[20..50] of integer;

function f(x:integer):integer
begin
 f:=x-1;
end;

function g(x:integer):integer
begin
 g:=x+1;
end;

function h(x:integer):real
begin
 h:=x+0.5;
end;

begin
	writestring("ok");
 a[f(g(f(g(20+f(20)))))] := h(f(30+g(g(30))));
end.